[tool.poetry]
name = "qdrant-explore"
version = "0.1.0"
description = ""
authors = ["Ravindra R. Jaju <jaju@sahaj.ai>"]
readme = "README.md"
packages = [{include = "qdrant_explore"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
qdrant-client = "^1.4.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
faker = "^19.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
